--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-maps": "0.30.2",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1"
+  },
+  "resolutions": {
+    "@types/react": "17.0.14",
+    "@types/react-dom": "17.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
