--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito-sans": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "expo": "~45.0.6",
+    "expo-font": "~10.1.0",
     "expo-location": "~14.2.2",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -23,8 +28,10 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-maps": "0.30.2",
     "react-native-render-html": "^6.3.4",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "0.17.7",
     "react-native-webview": "11.18.1"
   },
