--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "latlon-geohash": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-maps": "0.30.2",
+    "react-native-pager-view": "5.4.15",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.2.4",
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/latlon-geohash": "^2.0.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "typescript": "~4.3.5"
