--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": ["./jestsetup.js"]
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.2",
@@ -16,15 +21,19 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@testing-library/react-native": "^11.0.0",
     "@types/react-native-snap-carousel": "^3.8.5",
     "expo": "~45.0.6",
     "expo-font": "~10.1.0",
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^46.0.1",
     "latlon-geohash": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-test-renderer": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-maps": "0.30.2",
