--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "jest": {
     "preset": "jest-expo",
-    "setupFiles": ["./jestsetup.js"]
+    "setupFiles": [
+      "./jestsetup.js"
+    ]
   },
   "dependencies": {
     "@expo-google-fonts/nunito-sans": "^0.2.2",
@@ -28,12 +30,12 @@
     "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.4",
     "jest": "^26.6.3",
     "jest-expo": "^46.0.1",
     "latlon-geohash": "^2.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-test-renderer": "17.0.2",
     "react-native": "0.68.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-maps": "0.30.2",
@@ -44,7 +46,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-web": "0.17.7",
-    "react-native-webview": "11.18.1"
+    "react-native-webview": "11.18.1",
+    "react-test-renderer": "17.0.2"
   },
   "resolutions": {
     "@types/react": "17.0.14",
